Remove dead/unused code for building/exporting CSVs and Maps
If we need proper CSV creating/parsing later, we should use OpenCSV or similar; this doesn't handle quoting/escaping properly.